testCases/validTests/test4.cy
// Tests one line functions

%hook NSObject

function testing() {   printf("testing\n")    }

%end